--- a/sty.css
+++ b/sty.css
@@ -6,7 +6,6 @@
 	font-size: 200%;
 	color:white;
 	position:relative;
-	font-family: 'Quicksand', sans-serif;
 }
 .main h1{
 	margin: 0;
@@ -14,31 +13,25 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	font-family: 'Quicksand', sans-serif;
 }
 .mid{
-	padding-top:20px;
 	text-align: center;
-	font-family: 'Quicksand', sans-serif;
+	
 }
 .mid p{
 	text-align: center;
 	padding-right: 20%;
 	padding-left: 20%;
-	font-family: 'Quicksand', sans-serif;
 	 
 }
 .mid h2{
-	font-size:250%;
 	text-align: center;
-	font-family: 'Quicksand', sans-serif;
+	
 }
 .links{
 	font-size: 150%;
 	text-align: center; 
-	font-family: 'Quicksand', sans-serif;
-	margin-top: 120px;
-	margin-bottom:100px;
+	color:red;
 }
 .galmain{
 	background-image: url(https://images.pond5.com/simple-star-space-background-effect-footage-023768280_prevstill.jpeg);
@@ -47,7 +40,6 @@
 	font-size: 200%;
 	color:white;
 	position:relative;
-	font-family: 'Quicksand', sans-serif;
 }
 .galmain h1{
 	margin: 0;
@@ -55,47 +47,30 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	font-family: 'Quicksand', sans-serif;
 }
-div.gallery {
-  margin: 5px;
-  border: 1px solid #ccc;
-  float: left;
-  width: 350px;
- 
-}
-
-div.gallery:hover {
-  border: 1px solid #777;
-}
-
-div.gallery img {
-  width: 100%;
-  height: auto;
-}
-
-div.desc {
-  padding: 15px;
-  text-align: center;
-  font-family: 'Quicksand', sans-serif;
-}
-.galbody{
-	height:100%;
-	display: flex;
-    flex-wrap: wrap;
-	padding-right: 10%;
-	padding-left: 10%;
+.galBG{
+	background-color:white;
+	text-align:center;
+	padding-right: 20%;
+	padding-left: 20%;
 	
 	
-		
 }
-.galbigp{
-	  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+.galpt{
+	font-size:30px;
+	display:grid;
+	grid-template-columns:repeat(3, 1fr);
+	overflow:hidden;
+	
+ }
+ .galbox{
+	 width:auto;
+	 
+ }
+.galcenter{
+	max-width:100%;
+	
 }
-
 .laimain{
 	background-image: url(https://images.pond5.com/simple-star-space-background-effect-footage-023768280_prevstill.jpeg);
 	height: 20%;
@@ -103,7 +78,6 @@ div.desc {
 	font-size: 200%;
 	color:white;
 	position:relative;
-	font-family: 'Quicksand', sans-serif;
 }
 .laimain h1{
 	margin: 0;
@@ -111,42 +85,23 @@ div.desc {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	font-family: 'Quicksand', sans-serif;
 }
 .laitit{
 	text-align:center;
 	font-size:40px;
-	font-family: 'Quicksand', sans-serif;
+	
 }
 .latsec{
 	text-align:center;
 	font-size:30px;
 	padding-right: 10%;
 	padding-left: 10%;
-	font-family: 'Quicksand', sans-serif;
+	
 	
 }
-.latsec div{
-	margin-top:85px;
-	margin-bottom:85px;
-}
-.latseclinks{
-	border-top:1px solid black;
-	padding-top:20px;
-}
+.aboutitle{
 	
-.button {
-  background-color: #A9A9A9;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
 }
-.button:hover {
-	background-color:black;
-	color:white;
+.aboutmain{
 	
 }
